--- a/style.css
+++ b/style.css
@@ -117,3 +117,26 @@ hr {
     }
 
 }
+
+
+@media(max-width: 750px) {
+
+    .container {
+        width: 90%;
+        margin: 70px auto;
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    }
+
+    .card {
+        background-color: hsl(217, 19%, 24%);
+        border-radius: 15px;
+        padding: 30px;
+    }
+
+    .dice {
+        margin: auto;
+        position: relative;
+        bottom: -60px;
+    }
+
+}
